Cambiando el diseno de la pagina de contacto

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -404,3 +404,11 @@ body.light {
     top: 8px;
     left: 2px
 }
+.social{
+  display: flex;
+  justify-content: center;
+}
+.redes{
+  align-self: center;
+  margin: 10px;
+}
