--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,4 +1,9 @@
-$font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
+@font-face {
+  font-family: "WorkSans";
+  src: url("../fonts/WorkSans.ttf");
+}
+
+$font-family:"WorkSans",sans-serif;
 
 html,
 body {
@@ -9,7 +14,7 @@ body {
   margin-top: 0
 }
 body.light {
-  --primary-color: #4d4d4d;
+  --primary-color: #2147f1;
   --primary-text-color: #fff;
   --featured-bg: #493b8a;
   --featured-text: #fff;
@@ -29,7 +34,7 @@ body.light {
   --input-bg: var(--background);
 }
 body.dark {
-  --primary-color: #9984d5;
+  --primary-color: #e44a4a;
   --primary-text-color: #fff;
   --featured-bg: #66578d;
   --featured-text: #fff;
@@ -112,7 +117,7 @@ a {
 .headline {
   font-size: 36px;
   font-weight: 900;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.9rem;
 }
 .button {
   padding: 12px 20px;
@@ -142,6 +147,7 @@ a {
   }
 }
 .primary-content {
+  font-family: $font-family;
   font-size: 18px;
   margin-bottom: 32px;
   line-height: 1.5;
@@ -242,6 +248,7 @@ a {
     margin-bottom: 0;
   }
   .post-link {
+    font-size: 1.1rem;
     color: var(--text-color);
     text-decoration: none;
   }
