Se agrego font display en el css

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,6 +1,7 @@
 @font-face {
   font-family: "WorkSans";
   src: url("../fonts/WorkSans.ttf");
+  font-display: swap;
 }
 
 $font-family:"WorkSans",sans-serif;
